force-app/main/default/objects/OpsIncidentIntegrationLog__c/OpsIncidentIntegrationLog__c.object-meta.xml
<CustomObject>
    <description>Structured integration logs for Ops Incident AI diagnosis and Slack delivery.</description>
    <label>Ops Incident Integration Log</label>
    <nameField>
        <displayFormat>LOG-{000000}</displayFormat>
        <label>Log Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Ops Incident Integration Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>