force-app/main/default/objects/OpsIncidentIntegrationLog__c/fields/OpsIncident__c.field-meta.xml
<CustomField>
    <fullName>OpsIncident__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Ops Incident</label>
    <referenceTo>OpsIncident__c</referenceTo>
    <relationshipLabel>Integration Logs</relationshipLabel>
    <relationshipName>IntegrationLogs</relationshipName>
    <type>Lookup</type>
</CustomField>