force-app/main/default/objects/OpsIncidentIntegrationLog__c/fields/Provider__c.field-meta.xml
<CustomField>
    <fullName>Provider__c</fullName>
    <label>Provider</label>
    <length>80</length>
    <type>Text</type>
</CustomField>