force-app/main/default/objects/OpsIncidentIntegrationLog__c/fields/Stage__c.field-meta.xml
<CustomField>
    <fullName>Stage__c</fullName>
    <label>Stage</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>AI_Diagnosis</fullName>
                <default>true</default>
                <label>AI Diagnosis</label>
            </value>
            <value>
                <fullName>Slack_Delivery</fullName>
                <label>Slack Delivery</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>